Fixed overlap of session links and in-activity navigation menu

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -146,7 +146,7 @@ button.disabled span.edit_trigger.disabled {
 .page-nav {
   position: absolute;
   right: 0;
-  top: 20px;
+  top: 50px;
   .secondary {
     background: #fff;
     bottom: 0 !important;
